# agentic-slackbot

./: .dockerignore  .gitignore  Dockerfile  Makefile  README.md  app.py  firecrawl_servers_config.json  main.py  pyproject.toml  servers_config.json
bot/: agent.py  app.py  config.py  model.py  slack.py
